--- a/Suggestive/SuggestiveWeb/Views/Home/_Home.cshtml
+++ b/Suggestive/SuggestiveWeb/Views/Home/_Home.cshtml
@@ -1,5 +1,4 @@
-﻿<!-- ko with: home -->
-<div class="jumbotron">
+﻿<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -28,5 +27,3 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
-
-<!-- /ko -->
