--- a/Suggestive/SuggestiveWeb/Views/Home/_Home.cshtml
+++ b/Suggestive/SuggestiveWeb/Views/Home/_Home.cshtml
@@ -1,29 +1,35 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Suggestive</h1>
+    <p class="lead">An application to allow the recording and prioritisation of user feedback requests.</p>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Your information</h2>
-        <p>This section shows how you can call ASP.NET Web API to get the user details.</p>
-        <p data-bind="text: myHometown"></p>
+        <h2>Creating Feedback Items</h2>
+        <ul>
+            <li>Creating a feedback item</li>
+            <li>Enter details of feedback item in a stand alone screen</li>
+            <li>User must be authenticated to create an item</li>
+            <li>Tags are user definable and can be selected</li>
+            <li>All items given status of new</li>
+        </ul>
        
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=273732">Learn more &raquo;</a></p>
+
     </div>
 
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET Single Page Application (SPA) helps you build applications that include significant client-side interactions using HTML, CSS, and JavaScript.
-            It's now easier than ever before to getting started writing highly interactive web applications.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=273732">Learn more &raquo;</a></p>
+        <h2>Voting</h2>
+        <ul>
+            <li>Each user gets 10 votes to be allocated.</li>
+            <li>A user can assign 1,2 or 3 votes to a feedback item</li>
+            <li>Once all the users votes are allocated they must un-allocate some of them to assign them to another item</li>
+            <li>A user can modify their vote on an item at any point</li>
+            <li>A user must be authenticated/logged in to vote</li>
+        </ul>
+
     </div>
 
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2></h2>
+        <p></p>
     </div>
 </div>
