Added header image

--- a/Suggestive/SuggestiveWeb/Views/Home/_Home.cshtml
+++ b/Suggestive/SuggestiveWeb/Views/Home/_Home.cshtml
@@ -1,6 +1,13 @@
 ﻿<div class="jumbotron">
-    <h1>Suggestive</h1>
-    <p class="lead">An application to allow the recording and prioritisation of user feedback requests.</p>
+    <div class="container">
+        <div class="col-lg-2">
+            <img src="../../Content/128px-McVitie&#39;s_chocolate_digestive_biscuit.jpg" alt="" class="bottom" />
+        </div>
+        <div class="col-lg-10">
+            <h1> Suggestive</h1>
+            <p class="lead">An application to allow the recording and prioritisation of user feedback requests.</p>
+        </div>
+    </div>
 </div>
 <div class="row">
     <div class="col-md-4">
@@ -12,8 +19,6 @@
             <li>Tags are user definable and can be selected</li>
             <li>All items given status of new</li>
         </ul>
-       
-
     </div>
 
     <div class="col-md-4">
