--- a/Suggestive/src/Suggestive.Web/Views/_ViewImports.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using Suggestive.Web.Models
 @using Suggestive.Web.ViewModels.Account
 @using Suggestive.Web.ViewModels.Manage
-@using Microsoft.AspNet.Identity
-@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@using Microsoft.AspNetCore.Identity
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
