--- a/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
             <link rel="stylesheet" href="~/css/bootswatch.min.css" />
-            <link rel="stylesheet" href="~/css/site.css" />
+            <link rel="stylesheet" href="~/css/site.min.css" />
         </environment>
         <environment names="Staging,Production">
             <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css"
