--- a/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
@@ -34,8 +34,9 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-controller="Requirements" asp-action="Index">Specification</a></li>
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Help">API</a></li>
+                        <li><a asp-controller="Api" asp-action="Help">API</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
