--- a/Suggestive/src/Suggestive.Web/Views/Home/Contact.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,28 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Connect";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<p>Feel free to contact me via any of the various methods below</p>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="row">
+    <div class="col-lg-12">
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+        <ul class="list-inline banner-social-buttons">
+            <li>
+                <a href="https://twitter.com/sforth" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+            </li>
+            <li>
+                <a href="https://github.com/Steve4th" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/+SteveForth" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/stephen.forth" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+            </li>
+            <li>
+                <a href="https://uk.linkedin.com/in/steveforth" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+            </li>
+        </ul>
+    </div>
+</div>
