--- a/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
-            <link rel="stylesheet" href="~/css/bootswatch.min.css" />
+            <link rel="stylesheet" href="~/css/bootswatch.min.css"/>
+            <link rel="stylesheet" href="~/lib/Font-Awesome/css/font-awesome.css"/>
             <link rel="stylesheet" href="~/css/site.min.css" />
         </environment>
         <environment names="Staging,Production">
@@ -15,7 +16,9 @@
                   asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
                   asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/superhero/bootstrap.min.css"
-                  asp-fallback-href="~/css/bootswatch.min.css" />
+                  asp-fallback-href="~/css/bootswatch.min.css"/>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+                  asp-fallback-href="~/lib/Font-Awesome/css/font-awesome.css"/>
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
     </head>
