Updated spec display to use font awesome

--- a/Suggestive/src/Suggestive.Web/Views/Requirements/Index.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Requirements/Index.cshtml
@@ -20,7 +20,7 @@
                             <a href="#" class="list-group-item">
 
                                 <h4 class="list-group-item-heading">
-                                    <span class="glyphicon glyphicon-file"></span>
+                                    <span class="fa fa-puzzle-piece fa-lg" aria-hidden="true"></span>
                                     @ticket.Summary
                                 </h4>
                                 <p class="list-group-item-text">@ticket.Description ...</p>
@@ -41,7 +41,7 @@
                             <a href="#" class="list-group-item">
 
                                 <h4 class="list-group-item-heading">
-                                    <span class="glyphicon glyphicon-file"></span>
+                                    <span class="fa fa-puzzle-piece fa-lg" aria-hidden="true"></span>
                                     @ticket.Summary
                                 </h4>
                                 <p class="list-group-item-text">@ticket.Description ...</p>
@@ -62,7 +62,7 @@
                         <a href="#" class="list-group-item">
 
                             <h4 class="list-group-item-heading">
-                                <span class="glyphicon glyphicon-file"></span>
+                                <span class="fa fa-puzzle-piece fa-lg" aria-hidden="true"></span>
                                 @ticket.Summary
                             </h4>
                             <p class="list-group-item-text">@ticket.Description ...</p>
