Added Swagger to document api

--- a/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-controller="Requirements" asp-action="Index">Specification</a></li>
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Api" asp-action="Help">API</a></li>
+                        <li><a asp-controller="Swagger" asp-action="UI">API</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
