Added ticket id display

--- a/Suggestive/src/Suggestive.Web/Views/Requirements/Index.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Requirements/Index.cshtml
@@ -18,11 +18,11 @@
                     {
                         <div class="list-group">
                             <a href="#" class="list-group-item">
-
                                 <h4 class="list-group-item-heading">
                                     <span class="fa fa-puzzle-piece fa-lg" aria-hidden="true"></span>
                                     @ticket.Summary
                                 </h4>
+                                <span class="badge">@ticket.Id</span>
                                 <p class="list-group-item-text">@ticket.Description ...</p>
                             </a>
                         </div>
@@ -44,6 +44,7 @@
                                     <span class="fa fa-puzzle-piece fa-lg" aria-hidden="true"></span>
                                     @ticket.Summary
                                 </h4>
+                                <span class="badge">@ticket.Id</span>
                                 <p class="list-group-item-text">@ticket.Description ...</p>
                             </a>
                         </div>
@@ -65,6 +66,7 @@
                                 <span class="fa fa-puzzle-piece fa-lg" aria-hidden="true"></span>
                                 @ticket.Summary
                             </h4>
+                            <span class="badge">@ticket.Id</span>
                             <p class="list-group-item-text">@ticket.Description ...</p>
                         </a>
                     </div>
