--- a/Suggestive/src/Suggestive.Web/Views/_ViewImports.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Suggestive.Web.ViewModels.Manage
 @using Microsoft.AspNetCore.Identity
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper "*, Suggestive.Web"
