--- a/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Shared/_Layout.cshtml
@@ -36,10 +36,11 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        @*<li><a asp-controller="Home" asp-action="Index">Home</a></li>*@
+                        <li><a asp-controller="Suggestion" asp-action="Index">Suggestions</a></li>
                         <li><a asp-controller="Requirements" asp-action="Index">Specification</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-controller="Swagger" asp-action="UI">API</a></li>
+                        <li><a asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
