--- a/Suggestive/src/Suggestive.Web/Views/Suggestion/Index.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Suggestion/Index.cshtml
@@ -1,6 +1,23 @@
 ﻿<div ng-app="suggestive">
     <div ng-controller="suggestionController as vm">
-        {{ vm.name }}
+        <table class="table table-responsive table-striped">
+            <tr ng-repeat="suggestion in vm.suggestions">
+                <td>{{suggestion.title}}</td>
+                <td>{{suggestion.description}}</td>
+                <td>{{suggestion.createdOn | date:'fullDate' }}</td>
+                <td><a href="#" class="btn btn-sm btn-primary">Edit</a></td>
+            </tr>
+        </table>
+
+        <form novalidate name="newSuggestionForm">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="title" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Add" class="btn btn-sm btn-success" />
+            </div>
+        </form>
     </div>
 </div>
 
