--- a/Suggestive/src/Suggestive.Web/Views/Suggestion/Index.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Suggestion/Index.cshtml
@@ -31,11 +31,14 @@
 @section Scripts {
     <environment names="Development">
         <script src="~/lib/angular.min.js"></script>
+        <script src="~/lib/angular-route.min.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://code.angularjs.org/1.5.7/angular.min.js"
                 asp-fallback-src="~/lib/angular.min.js">
         </script>
+        <script asrc="https://code.angularjs.org/1.5.7/angular-route.min.js"
+                asp-fallback-src="~/lib/angular-route.min.js"></script>
     </environment>
 
     <script src="~/js/app.js"></script>
