--- a/Suggestive/src/Suggestive.Web/Views/Suggestion/Index.cshtml
+++ b/Suggestive/src/Suggestive.Web/Views/Suggestion/Index.cshtml
@@ -6,7 +6,7 @@
     <environment names="Development">
         <script src="~/lib/angular.min.js"></script>
         <script src="~/lib/angular-route.min.js"></script>
-        <script src="~/js/app.js"></script>
+        <script src="~/js/app.min.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="//code.angularjs.org/1.5.7/angular.min.js"
